# NumSim

./: .gitignore  README.md
Ex1/: CMakeLists.txt
Ex1/input/: lid_driven_cavity_simple.txt
Ex1/scripts/: compile_and_run.sh  run_cluster.sh
Ex1/src/: CMakeLists.txt  main.cpp  settings.cpp  settings.h
Ex1/src/algorithms/: computation.cpp  computation.h  gauss_seidel.cpp  gauss_seidel.h  pressure_solver.cpp  pressure_solver.h  sor.cpp  sor.h
Ex1/src/discretization/: central_differences.cpp  central_differences.h  discretization.cpp  discretization.h  donor_cell.cpp  donor_cell.h  staggered_grid.cpp  staggered_grid.h
Ex1/src/output_writer/: output_writer.cpp  output_writer_text.cpp
Ex1/src/storage/: array2D.cpp  array2D.h  field_variable.cpp  field_variable.h
Ex2/: CMakeLists.txt  multijob.sh  multinodejob.sh  start.sh
Ex2/input/: lid_driven_cavity_simple.txt  scenario3.txt  scenario3_5.txt  scenario3_6.txt
Ex2/src/: CMakeLists.txt  computation.h  main.cpp  timekeeper.h
Ex2/src/boundary/: async_neighbour_boundary.h  boundary.cpp  boundary.h
Ex2/src/discretization/: async_partition.h  donor_cell.cpp  partition.h  partition_information.cpp  partition_information.h  partition_shell.h  staggered_grid.h
Ex2/src/output_writer/: output_writer.h  output_writer_paraview.cpp  output_writer_paraview.h
Ex2/src/pressure_solver/: cg.cpp  checkerboard.cpp  checkerboard.h  pressure_solver.cpp
Ex2/src/storage/: array2D.cpp  array2D.h  field_variable.h
Ex3/: .gitignore
Ex3/heated-cavity/0/: alphat  epsilon  k  nut  p  p_rgh
Ex3/heated-cavity/constant/: transportProperties  turbulenceProperties
Ex3/heated-cavity/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
Ex3/karman-vortex/0/: U  p
Ex3/karman-vortex/constant/: transportProperties
Ex3/karman-vortex/system/: blockMeshDict  controlDict
Ex3/simple-cavity/0/: T  U
Ex3/simple-cavity/constant/: transportProperties
Ex3/simple-cavity/system/: blockMeshDict  controlDict
Ex3/stepped-channel/0/: U  p
Ex3/stepped-channel/constant/: transportProperties
Ex3/stepped-channel/system/: blockMeshDict  controlDict
Ex4/: CMakeLists.txt
Ex4/input/: cluster.txt  lid_driven_cavity.txt  outflow.txt  scenario3.txt
Ex4/src/: CMakeLists.txt  computation.cpp  computation.h  main.cpp  settings.cpp  settings.h  testmain.cpp
Ex4/src/boundary/: async_neighbour_boundary.cpp  async_neighbour_boundary.h  boundary.cpp  boundary.h  dirichlet.cpp  dirichlet.h  mpi_wrapper.h  neighbour_boundary.cpp  neighbour_boundary.h  outflow.cpp  outflow.h  pressure.cpp  pressure.h  slip.cpp  slip.h
Ex4/src/discretization/: async_partition.cpp  async_partition.h  central_differences.cpp  central_differences.h  discretization.cpp  discretization.h  donor_cell.cpp  donor_cell.h  partition.cpp  partition.h  partition_information.cpp  partition_information.h  partition_shell.h  staggered_grid.cpp  staggered_grid.h
Ex4/src/output_writer/: output_writer.cpp  output_writer_paraview_parallel.cpp  output_writer_paraview_parallel.h  output_writer_text.cpp  output_writer_text.h
Ex4/src/pressure_solver/: cg.h  checkerboard.cpp  checkerboard.h  gauss_seidel.cpp  gauss_seidel.h  pressure_solver.cpp  pressure_solver.h  sor.cpp  sor.h
Ex4/src/storage/: array2D.cpp  array2D.h  array3D.cpp  array3D.h  field_variable.cpp  field_variable.h
Ex4_correlation/: compare_foam  compare_output3d  lid_driven_cavity.txt  lid_driven_cavity_all.txt
Ex4_correlation/foam-cd-scenario3/0/: p
Ex4_correlation/foam-cd-scenario3/system/: controlDict
Ex4_correlation/foam-dc-scenario3/constant/: transportProperties
Ex4_correlation/foam-dc-scenario3/system/: fvSchemes
Ex4_correlation/foam-front-x/0/: U
Ex4_correlation/foam-front-y/0/: U
Ex4_correlation/foam-left-y/0/: U
Ex4_correlation/foam-left-y/system/: controlDict
Ex4_correlation/foam-left-z/0/: U
Ex4_correlation/foam-left-z/constant/: transportProperties
Ex4_correlation/foam-left-z/system/: blockMeshDict
Ex4_correlation/foam-scenario3/0/: U
Ex4_correlation/foam-scenario3/system/: blockMeshDict
Ex4_correlation/foam-top-x/0/: U  p
Ex4_correlation/foam-top-x/constant/: transportProperties
Ex4_correlation/foam-top-x/system/: blockMeshDict
Ex4_correlation/foam-top-z/0/: U
Ex4_correlation/foam-top-z/constant/: transportProperties
Ex4_correlation/numsim-all-dc/: lid_driven_cavity.txt
Ex4_correlation/numsim-scenario3/: numsim_3d  scenario3.txt
Exercise1/: CMakeLists.txt
Exercise1/src/: CMakeLists.txt  Makefile  cmake_install.cmake  helloWorld.cpp  main.cpp
Exercise1/src/Settings/: Settings.cpp  Settings.hpp
Exercise1/src/test/: testSettings.cpp
compare_openfoam/: CMakeLists.txt  main.cpp
compare_output3d/: CMakeLists.txt  main.cpp
